--- a/css/main.css
+++ b/css/main.css
@@ -1420,6 +1420,24 @@ header .logo a {
 	color: #cc005f;
 }
 
+/* 二维码样式，初始状态下隐藏 */
+.intro-social .qrcode {
+    position: absolute;
+    top: -350px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none; /* 默认隐藏 */
+    width: 300px;
+    border: 1px solid #ccc;
+    background-color: white;
+    padding: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.intro-social .qrcode img {
+    width: 100%;
+}
+
 /**
  * responsive:
  * Intro
@@ -1866,6 +1884,15 @@ header .logo a {
 	-webkit-transform: scale(1.05);
 	-ms-transform: scale(1.05);
 	transform: scale(1.05);
+}
+
+#portfolio .folio-item .item-wrap {
+	padding: 20px;
+    border: 1px solid transparent; /* 基础蓝色边框 */
+    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.1), /* 内发光，青色 */
+                        0 0 30px rgba(0, 0, 0, 0.2);     /* 外发光，青色 */
+    transition: box-shadow 0.4s ease; /* 动画效果 */
+	overflow: hidden; /* 截取超出的部分 */
 }
 
 /**
@@ -2525,6 +2552,25 @@ footer .footer-social li {
 footer .footer-social li a {
 	color: #FFFFFF;
 }
+
+/* 二维码样式，初始状态下隐藏 */
+footer .footer-social .qrcode {
+    position: absolute;
+    top: -350px;
+    left: 40%;
+    transform: translateX(-40%);
+    display: none; /* 默认隐藏 */
+    width: 300px;
+    border: 1px solid #ccc;
+    background-color: white;
+    padding: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+footer .footer-social .qrcode img {
+    width: 100%;
+}
+
 footer .copyright span {
 	display: inline-block;
 }
